[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scenes/Enviroment.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/PlayButton.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Hero.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=4]
[ext_resource path="res://Scenes/StartRock.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Score.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Green/Green Button1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Green/Green Button4.png" type="Texture" id=8]
[ext_resource path="res://monogram.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Scenes/CustomText.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sprites/spr_coin_azu.png" type="Texture" id=11]
[ext_resource path="res://Scripts/Sprite.gd" type="Script" id=12]
[ext_resource path="res://Sprites/arrow.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Keys.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Rock/Rock Button2.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Rock/Rock Button1.png" type="Texture" id=16]
[ext_resource path="res://Scripts/CreditsButton.gd" type="Script" id=17]
[ext_resource path="res://POL-azure-waters-short.wav" type="AudioStream" id=18]
[ext_resource path="res://Scripts/Music.gd" type="Script" id=19]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[node name="Level" type="Node2D"]
script = ExtResource( 4 )

[node name="Enviroment" parent="." instance=ExtResource( 1 )]
z_index = -3

[node name="StartRock" parent="." instance=ExtResource( 5 )]
position = Vector2( 885.421, 696.563 )
z_index = -2

[node name="StartRock2" parent="." instance=ExtResource( 5 )]
position = Vector2( 142.475, 693.381 )

[node name="Hero" parent="." instance=ExtResource( 3 )]
position = Vector2( 862.978, -34.4334 )
z_index = 1

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 452.071
margin_top = 92.8912
margin_right = 581.071
margin_bottom = 220.891
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickHere" parent="PlayButton" instance=ExtResource( 10 )]
margin_left = -343.339
margin_top = -32.1136
margin_right = -175.339
margin_bottom = 68.8864
text = "Click here to play"

[node name="WallJump" parent="PlayButton" instance=ExtResource( 10 )]
margin_left = 145.592
margin_top = 238.332
margin_right = 338.592
margin_bottom = 380.332
text = "Experiment with wall jumping"

[node name="Movement" parent="PlayButton" instance=ExtResource( 10 )]
margin_left = 220.153
margin_top = 603.486
margin_right = 426.153
margin_bottom = 643.486
text = " to move"

[node name="Collect" parent="PlayButton" instance=ExtResource( 10 )]
margin_left = -312.661
margin_top = 284.868
margin_right = -145.661
margin_bottom = 389.868
text = "Collect for points"

[node name="Highscore" parent="PlayButton" instance=ExtResource( 10 )]
margin_left = -31.7518
margin_top = 122.73
margin_right = 199.248
margin_bottom = 216.73
text = "Highscore: ??"

[node name="ClickHereArrow" type="Sprite" parent="PlayButton"]
position = Vector2( -128.776, 49.5842 )
scale = Vector2( 0.240242, 0.12395 )
texture = ExtResource( 13 )

[node name="WallJumpArrow" type="Sprite" parent="PlayButton"]
position = Vector2( 392.332, 310.069 )
scale = Vector2( 0.266685, 0.106015 )
texture = ExtResource( 13 )

[node name="MoveArrow" type="Sprite" parent="PlayButton"]
position = Vector2( 332.452, 544.05 )
scale = Vector2( 0.143093, 0.079237 )
texture = ExtResource( 13 )
flip_v = true

[node name="CollectArrow" type="Sprite" parent="PlayButton"]
position = Vector2( -128.14, 373.348 )
rotation = 1.5708
scale = Vector2( 0.110135, 0.106015 )
texture = ExtResource( 13 )
flip_v = true

[node name="DiamondExample" type="Sprite" parent="PlayButton"]
position = Vector2( -121.813, 452.447 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )
hframes = 4
script = ExtResource( 12 )

[node name="Keys" type="Node2D" parent="PlayButton"]
position = Vector2( 260.698, 589.385 )
scale = Vector2( 2, 2 )

[node name="WKey" type="Sprite" parent="PlayButton/Keys"]
position = Vector2( -0.08078, -16.2033 )
texture = ExtResource( 14 )
vframes = 8
hframes = 5
frame = 22

[node name="AKey" type="Sprite" parent="PlayButton/Keys"]
position = Vector2( -16.6592, -6.10352e-05 )
texture = ExtResource( 14 )
vframes = 8
hframes = 5

[node name="SKey" type="Sprite" parent="PlayButton/Keys"]
position = Vector2( 0.416504, 0 )
texture = ExtResource( 14 )
vframes = 8
hframes = 5
frame = 18

[node name="DKey" type="Sprite" parent="PlayButton/Keys"]
position = Vector2( 17.0756, 0.416443 )
texture = ExtResource( 14 )
vframes = 8
hframes = 5
frame = 3

[node name="CreditsButton" type="TextureButton" parent="."]
margin_left = 247.974
margin_top = 643.639
margin_right = 311.974
margin_bottom = 707.639
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 15 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsLabel" parent="CreditsButton" instance=ExtResource( 10 )]
margin_left = 48.8983
margin_top = 16.2123
margin_right = 177.898
margin_bottom = 56.2123
text = " Credits"

[node name="CreditsNode" type="Node2D" parent="CreditsButton"]
visible = false
position = Vector2( -247.974, -643.639 )

[node name="Credits" parent="CreditsButton/CreditsNode" instance=ExtResource( 10 )]
margin_left = 153.537
margin_top = 66.4679
margin_right = 835.537
margin_bottom = 493.468
text = " Game By: @DontBeNull

 OpenSource Art From itch.io users::
	
	Sven T. : Hero Knight
	
	ansimuz : Magic Cliffs Enviroment
	
	LateNightCoffe : UI Shiny kinda Buttons
	
	lukasfdahl : 15 * 16 pixelart keys"

[node name="Score" type="RichTextLabel" parent="."]
margin_left = 838.0
margin_top = 13.0
margin_right = 975.0
margin_bottom = 49.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
text = " Score: 0"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )
autoplay = true
script = ExtResource( 19 )
[connection signal="hero_death" from="Hero" to="PlayButton" method="_on_Hero_hero_death"]
[connection signal="hero_death" from="Hero" to="." method="_on_Hero_hero_death"]
[connection signal="button_up" from="PlayButton" to="PlayButton" method="_on_PlayButton_button_up"]
[connection signal="button_up" from="PlayButton" to="." method="_on_PlayButton_button_up"]
[connection signal="button_up" from="CreditsButton" to="CreditsButton" method="_on_CreditsButton_button_up"]
[connection signal="button_up" from="CreditsButton" to="PlayButton" method="_on_CreditsButton_button_up"]
[connection signal="finished" from="AudioStreamPlayer2D" to="AudioStreamPlayer2D" method="_on_AudioStreamPlayer2D_finished"]
